fix nac padding on mobile

--- a/frontend/src/components/mobileNav/MobileNav.scss
+++ b/frontend/src/components/mobileNav/MobileNav.scss
@@ -11,7 +11,6 @@ $nav-button-dark-green: #1b5e20;
     flex-direction: column;
     width: 100%;
     background-color: white;
-    padding: 5px 0px;
 
     .mobile-horizontal {
       display: flex;
